# Aswarm

./: .env.example  .gitignore  Dockerfile  Dockerfile.worker  README.md  analysis.md  dev.db  dev.db-shm  dev.db-wal  docker-compose.yml  group_report.docx  llm_landscape_report.md  package-lock.json  package.json  pyproject.toml  report.docx  report.md  start.sh  tailwind.config.js  test.txt  test_api.sh  test_report.md
.omo/run-continuation/: ses_0d52b2df4ffeWR1TzYCgz99w9Z.json
agent-swarm-v2/: package-lock.json
agent-swarm-v2/agent_swarm/: agent_factory.py  data_buffer.py  office_skills.py  orchestrator.py  trace.py
agent-swarm-v2/prisma/: schema.prisma
agent_swarm/: __init__.py  agent_factory.py  budget.py  context.py  exceptions.py  judge.py  mcp_gateway.py  meta_scheduler.py  models.py  orchestrator.py  state_manager.py  trace.py  worker.py
agent_swarm/infrastructure/: llm_client.py  tool_registry.py
agent_swarm/prompts/: __init__.py  classifier.py  decomposer.py
agent_swarm/web/: server.py  storage.py
backend/: __init__.py  server.py  storage.py  task_executor.py  ws_manager.py
checkpoints/: task_4a8d419d_20260710_090137.json  task_4a8d419d_20260710_090205.json  task_4a8d419d_20260710_090343.json
examples/: basic_usage.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  (+7 more)
scripts/: generate_types.py
src/: types.ts
tests/: test_agent_factory.py  test_context.py  test_mcp_gateway.py  test_meta_scheduler.py  test_models.py  test_orchestrator.py  test_orchestrator_internals.py  test_server.py  test_sse_integration.py  test_state_manager.py  test_ws_integration.py  test_ws_manager.py
(+274 files in other folders)
