[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-swarm"
version = "0.1.0"
description = "Local Agent Swarm - AI-driven task decomposition and parallel execution"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "python-multipart>=0.0.9",
    "PyPDF2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.3",
    "mypy>=1.0",
]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
sandbox = [
    "sandlock>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["agent_swarm"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 55
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806"]

[tool.mypy]
strict = false
python_version = "3.10"
ignore_missing_imports = true
exclude = ["tests/"]
